fix: compare string using equals instead of ==